--- a/components/statusList/statusList.html
+++ b/components/statusList/statusList.html
@@ -12,8 +12,8 @@
             <div class="hbox hbox-auto-xs hbox-auto-sm">
                 <div class="col">
                     <div class="padder">
-                        <div class="m-l-lg">
-                            <a ui-sref="layout.statusRegister" class="btn btn-success m-l-lg">New Status</a>
+                        <div class="m-lg">
+                            <a ui-sref="layout.statusRegister" class="btn btn-success">New Status</a>
                         </div>
                         <div class="streamline b-l b-info m-l-lg m-b padder-v" ng-init="loadStatus()">
                             <div ng-repeat="status in statusList" ng-if="status.text">
