--- a/components/statusRegister/statusRegister.html
+++ b/components/statusRegister/statusRegister.html
@@ -12,7 +12,7 @@
             <div class="col-md-6">
                 <ul class="breadcrumb bg-white b-a">
                     <li><a ui-sref="layout.statusList"><i class="fa fa-home"></i> News Feed</a></li>
-                    <li class="active">News Feed</li>
+                    <li class="active">New Status</li>
                 </ul>
                 <div class="panel panel-default">
                     <div class="panel-body">
